@@ -2,6 +2,7 @@ Overview of changed in protobuf-vala 0.0.8
 
   * Allow fields that use keywords for names
   * Reset fields when decoding
+  * Allow decoding from existing buffers
 
 Overview of changed in protobuf-vala 0.0.7
 
